# diansai-debug-handbook

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  PRD.md  PRODUCT.md  README.md  compose.yml  render.yaml
.hallmark/: log.json  preflight.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  notification_helpers.py  router.py
backend/app/api/routes/: articles.py  auth.py  comments.py  governance.py  health.py  notifications.py  reviews.py  symptoms.py  uploads.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  bootstrap.py  database.py  migrate_governance.py  migrate_revision_metadata.py  seed.py
backend/app/models/: article_revision.py  base.py  favorite.py  feedback.py  governance.py  notification.py  user.py
backend/app/schemas/: __init__.py  article.py  auth.py  governance.py  health.py  notification.py  symptom.py
backend/app/services/: image_storage.py
backend/tests/: conftest.py  test_contribution_flow.py  test_governance_flow.py  test_health.py  test_image_storage.py  test_production_delivery.py  test_symptoms.py  test_uploads.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LEARNING_ROADMAP.md
frontend/: README.md  index.html  package-lock.json  package.json  tokens.css
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: articles.ts  auth.ts  client.ts  governance.ts  notifications.ts  symptoms.ts
frontend/src/app/: query-client.ts  route-elements.tsx  router.tsx
frontend/src/components/: app-layout.tsx  (+20 more)
(+23 files in other folders)
