[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "diansai-wiki-api"
version = "0.1.0"
description = "电赛白皮书 FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "peewee>=3.17,<4.0",
    "pydantic-settings>=2.7,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9,<3.0"]
dev = [
    "pytest>=8.3,<10.0",
    "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
